--- a/application/src/components/Cards.css
+++ b/application/src/components/Cards.css
@@ -1,6 +1,6 @@
 .Cards{
     display: flex;
-    width: 100%;
+    width: 90%;
     flex-direction: column;
 
 }
@@ -15,6 +15,14 @@
     color: #b9b9b9;
     font-size: 1.2rem;
     
+}
+.wrapper{
+    display: flex;
+    align-items: center;
+}
+
+.wrapper img{
+    margin-left: 40px;
 }
 
 .wrapper span{
