solving the display cards problem

--- a/application/src/components/Cards.css
+++ b/application/src/components/Cards.css
@@ -1,4 +1,4 @@
-.Cards{
+.CardsHeader{
     display: flex;
     width: 90%;
     flex-direction: column;
@@ -29,4 +29,28 @@
     color: #ff1510;
     font-size: 1rem;
     margin-left: 40px;
+}
+
+.cards-container{
+    margin-top: 40px ;
+    border: 1px solid red;
+    display: flex;
+    height: 1000px;
+    
+    flex-wrap: wrap;
+    
+}
+.card{
+    max-width: 150px;
+    max-height: 200px;
+}
+
+.image{
+    width: 150px;
+    height: 150px;
+    background-color: grey;
+}
+
+.card h1{
+    font-size: 20px ;
 }
